- fixed an issue that added back light component to empty gameobject if it was removed and the scene was reloaded
- fixed dynamic rigidbody with gravity enabled not moving in game

0.1.3.0006:
- actually added audio gameobject with its own icon for real this time
- added camera gameobject with its own icon
- minor linux compatibility fixes
- limit camera, light and audio components to empty gameobject only, cannot add more than one of those to it
- copy attached audio file to audio object folder
- can play multiple songs at the same time
- no longer importing files in audio folder
- can remove attached audio file from audio object
- moved billboard and border bool checks from scene window right panel to settings window graphics tab
- saving billboard and border checks in config file instead of scene file

0.1.3.0007:
- engine and game can run even if there is no camera
- removed old camera scripts and moved their content to cameraobject and cameracomponent scripts
- engine always creates a scene camera and switches to it by default when scene is opened
- can toggle between scene camera and user-created cameras
- can set player camera in settings window game tab, without this the game will not have an active camera
- qqq console command bypasses save check
- fixed game not printing engine messages to game console
- enable debug console messages by default in engine or game debug version
- improved gameobject save file formatting
- saving scene camera data to scene file only in engine
- delete old gameobject save file if object was renamed in inspector, mark scene as unsaved
- deny changing selected gameobject name to any reserved name used by gameobjects not created by end user
- deny setting imported asset name to any reserved name used by gameobjects not created by end user
- kalaphysics now properly handles wall collisions
- improved console commands system by allowing to easily add any new commands to console in either engine or game source code